linux (Generic): update .config for 5.18

--- a/projects/Generic/linux/linux.x86_64.conf
+++ b/projects/Generic/linux/linux.x86_64.conf
@@ -1627,6 +1627,7 @@ CONFIG_APPLE_PROPERTIES=y
 
 CONFIG_EFI_DEV_PATH_PARSER=y
 CONFIG_EFI_CUSTOM_SSDT_OVERLAYS=y
+# CONFIG_EFI_DISABLE_RUNTIME is not set
 
 #
 # Tegra firmware driver
