linux (Rockchip RK3288): update .config for 5.18

--- a/projects/Rockchip/devices/RK3288/linux/default/linux.arm.conf
+++ b/projects/Rockchip/devices/RK3288/linux/default/linux.arm.conf
@@ -1185,6 +1185,7 @@ CONFIG_ARM_SCPI_POWER_DOMAIN=m
 # CONFIG_FW_CFG_SYSFS is not set
 # CONFIG_TRUSTED_FOUNDATIONS is not set
 # CONFIG_GOOGLE_FIRMWARE is not set
+# CONFIG_EFI_DISABLE_RUNTIME is not set
 CONFIG_HAVE_ARM_SMCCC=y
 
 #
