linux (RPi): config options for 5.15.48-b34bf32
Drop linux-010-pr5052.patch, this is now in rpi kernel tree

Signed-off-by: Matthias Reichl <hias@horus.com>

--- a/projects/RPi/devices/RPi4/linux/linux.aarch64.conf
+++ b/projects/RPi/devices/RPi4/linux/linux.aarch64.conf
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 5.15.45 Kernel Configuration
+# Linux/arm64 5.15.48 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (Debian 10.2.1-6) 10.2.1 20210110"
 CONFIG_CC_IS_GCC=y
@@ -3776,6 +3776,7 @@ CONFIG_VIDEO_CX25840=m
 #
 # Camera sensor devices
 #
+# CONFIG_VIDEO_ARDUCAM_64MP is not set
 # CONFIG_VIDEO_ARDUCAM_PIVARIETY is not set
 # CONFIG_VIDEO_HI556 is not set
 # CONFIG_VIDEO_IMX208 is not set
@@ -6211,7 +6212,7 @@ CONFIG_ARCH_USE_SYM_ANNOTATIONS=y
 # Crypto library routines
 #
 CONFIG_CRYPTO_LIB_AES=y
-CONFIG_CRYPTO_LIB_ARC4=y
+CONFIG_CRYPTO_LIB_ARC4=m
 CONFIG_CRYPTO_LIB_BLAKE2S_GENERIC=y
 CONFIG_CRYPTO_ARCH_HAVE_LIB_CHACHA=m
 CONFIG_CRYPTO_LIB_CHACHA_GENERIC=m
